...

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:title="Block Apps"
			app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineSmall"
			app:menu="@menu/menu_app_list" />

...
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/app_list_recycler"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp" />

		<!-- Loading Overlay -->
		<LinearLayout
...
