...
			</LinearLayout>

		</LinearLayout>

		<!-- Loading Indicator -->
		<ProgressBar
			android:id="@+id/loading_indicator"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_gravity="center_vertical"
			android:layout_marginStart="12dp"
			android:visibility="gone"
			android:indeterminateTint="@color/primary" />
...
